--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 /*
-	PROTEIN THERMODYNAMICS SIMULATIONS
-	Copyright (C) 2021–2023 Johan Pääkkönen, Juha Rouvinen, University of Eastern Finland
+	BINDING SIMULATIONS
 	
 	This program is free software; you can redistribute it and/or
 	modify it under the terms of the GNU General Public License
@@ -24,7 +23,7 @@
 */
 
 /*
-	If you use this in your own research, please cite our paper: https://doi.org/10.1021/acsomega.2c00560
+	If you use this in your own research, please cite: https://doi.org/10.1021/acsomega.2c00560
 */
 
 body
