--- a/noscript.css
+++ b/noscript.css
@@ -1,6 +1,7 @@
 /*
-	BINDING SIMULATIONS
-
+	PROTEIN THERMODYNAMICS SIMULATIONS
+	Copyright (C) 2021–2023 Johan Pääkkönen, Juha Rouvinen, University of Eastern Finland
+	
 	This program is free software; you can redistribute it and/or
 	modify it under the terms of the GNU General Public License
 	as published by the Free Software Foundation; either version 2
@@ -23,7 +24,7 @@
 */
 
 /*
-	If you use this in your own research, please cite: https://doi.org/10.1021/acsomega.2c00560
+	If you use this in your own research, please cite our paper: https://doi.org/10.1021/acsomega.2c00560
 */
 
 main *
